system result inspection

--- a/www/index.html
+++ b/www/index.html
@@ -30,7 +30,7 @@ th, td { padding: 5px }
   <p>
     <label>Data source</label><br>
       <input type="radio" name="data_source" value="bm" checked> British Museum<br>
-      <input type="radio" name="data_source" value="em"> <s>Egyptian Museum</s><br>
+      <input type="radio" name="data_source" value="em"> Egyptian Museum<br>
   </p>
   <p>
     <label>System</label><br>
