removed user file

--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Process CSV</title>
+  <title>Workshop prototypes</title>
   <style>
 table, th, td {
   border: 1px solid black;
