split text and labels

--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,12 @@ th, td { padding: 5px }
   </script>
 </head>
 <body>
+  <p>
+  Home 
+  | British Museum: <a href="bm.csv">text</a>; <a href="bm.txt">gold labels</a> 
+  | Egyptian Museum: <a href="em.csv">text</a>; <a href="em.txt">gold labels</a>
+  | <a href="tagset.txt">Label set explanation</a>
+  | <a href="prompts.txt">Prompts</a>
   <h1>Inspect system analysis</h1>
   <form action="/cgi-bin/inspect_runs.py" method="post" enctype="multipart/form-data">
 
